@@ -45,6 +45,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   viewing contributions of a blocked IP address
 * (bug 22474) {{urlencode:}} now takes an optional second paramter for type of
   escaping.
+* Special:Listfiles now supports a username parameter
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
